--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <!DOCTYPE html>
+<html>
+   <head>
+      <title>Keerthana's Webiste</title>
+   </head>
+
+   <body>
+       <img src="Brandernburg.jpg" alt="Artists Statement: This piece was made to show the change from the old Germany to the new Germany, but also how there is growing xenophobia in this world. The survivor shown in this piece, Klaus Stern, represents the youth of today growing up in the middle of two fronts, those discriminatory against Jews and those against this position." width="1250" height="800">
+   </body>
+</html>
