--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Keerthana's Webiste</title>
+      <title>Holocaust Center</title>
    </head>
 
    <body>
